updated: implement clean architecture flow with 3-model separation and added Aggregate roots